0.11-stable: Fixed two cometic bugs in CSS:
 * Removed the explicit white background for links to missing resources, as it would overlap (and therefore partially hide) the dotted underline of the link above in a list of links.

 * Added the standard dotted underline on the path of hierarchical wiki pages.


git-svn-id: http://trac.edgewall.org/intertrac/log:/branches/0.11-stable@7580 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -303,7 +303,6 @@ label.disabled { color: #d7d7d7 }
 .wikipage h1, .wikipage h2, .wikipage h3 { margin-left: -18px }
 
 a.missing:link, a.missing:visited, span.missing { color: #998 }
-a.missing:link, a.missing:visited { background: #fafaf0 }
 a.missing:hover { color: #000 }
 a.closed:link, a.closed:visited { text-decoration: line-through }
 span.closed { text-decoration: line-through }
